--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Este es mi primer repositorio</h1>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eligendi expedita in aliquid dolorem ut ducimus dolore, illo adipisci, eaque quo. Amet molestias voluptate impedit deserunt nisi dicta facere nulla.</p>
+    </section>
 </body>
 </html>
