--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eligendi expedita in aliquid dolorem ut ducimus dolore, illo adipisci, eaque quo. Amet molestias voluptate impedit deserunt nisi dicta facere nulla.</p>
     </section>
+    <div>
+        <img src="https://picsum.photos/200/300" alt="">
+        <img src="https://picsum.photos/200/300" alt="">
+    </div>
 </body>
 </html>
