--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <section>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eligendi expedita in aliquid dolorem ut ducimus dolore, illo adipisci, eaque quo. Amet molestias voluptate impedit deserunt nisi dicta facere nulla.</p>
     </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, voluptatibus.</p>
     <div>
         <img src="https://picsum.photos/200/300" alt="">
         <img src="https://picsum.photos/200/300" alt="">
