--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eligendi expedita in aliquid dolorem ut ducimus dolore, illo adipisci, eaque quo. Amet molestias voluptate impedit deserunt nisi dicta facere nulla.</p>
     </section>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, voluptatibus.</p>
+    <div class="line-up"></div>
     <div>
         <img src="https://picsum.photos/200/300" alt="">
         <img src="https://picsum.photos/200/300" alt="">
