Se agrego un parrafo de prueba

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </section>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, voluptatibus.</p>
     <div class="line-up"></div>
+    <p>Lorem ipsum dolor sit amet.</p>
     <div>
         <img src="https://picsum.photos/200/300" alt="">
         <img src="https://picsum.photos/200/300" alt="">
