Se agrego un segundo line-up

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, voluptatibus.</p>
     <div class="line-up"></div>
     <p>Lorem ipsum dolor sit amet.</p>
+    <div class="line-up"></div>
     <div>
         <img src="https://picsum.photos/200/300" alt="">
         <img src="https://picsum.photos/200/300" alt="">
