Se agregaron nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         <img src="https://picsum.photos/200/300" alt="">
     </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo deserunt obcaecati incidunt soluta tempore iure nostrum optio, nesciunt molestiae facere delectus necessitatibus. Ullam repellendus asperiores, veniam, esse quia similique expedita iste eaque, ea obcaecati ducimus numquam id aut distinctio nostrum officia nisi. Est beatae amet similique magni praesentium mollitia sequi recusandae vero consequatur placeat, unde illum sint enim debitis quos quo at esse voluptas tempora ipsum qui obcaecati quam eligendi veritatis! Fugiat natus error eum optio vero voluptatem, laudantium ipsa. Sint adipisci odio provident fugit quos tempore nisi, dignissimos repellat. Culpa minus doloremque mollitia dignissimos amet reiciendis perferendis maxime non?</p>
+    <img src="" alt="">
+    <img src="" alt="">
 </body>
 </html>
